@@ -1,4 +1,4 @@
-/* $OpenBSD: key.h,v 1.38 2013/10/29 09:42:11 djm Exp $ */
+/* $OpenBSD: key.h,v 1.39 2013/12/06 13:30:08 markus Exp $ */
 
 /*
  * Copyright (c) 2000, 2001 Markus Friedl.  All rights reserved.
@@ -150,5 +150,8 @@ int	 ssh_rsa_verify(const Key *, const u_char *, u_int, const u_char *, u_int);
 void	key_dump_ec_point(const EC_GROUP *, const EC_POINT *);
 void	key_dump_ec_key(const EC_KEY *);
 #endif
+
+void     key_private_serialize(const Key *, Buffer *);
+Key	*key_private_deserialize(Buffer *);
 
 #endif
